PhD Proposal - Submission

--- a/PhDProposal 01/Chp2-Pre/PreResults2.tex
+++ b/PhDProposal 01/Chp2-Pre/PreResults2.tex
@@ -5,27 +5,14 @@
 
 \normalsize
 \section{Regime shift in the Cariaco Basin}
-The CARIACO time-series has been collecting detailed data on the phytoplankton community in the Cariaco Basin from 1995 to 2017 (see Section \ref{CARIACOintro} for a full description). What has been a particular focus of the research based on this data set is the apparent changes in environmental conditions documented in both the physical boundary conditions as well as the biological data. 
-As documented by \citet{Taylor2012}
-
-and further investigated by \citet{Pinckney2015}
-
-Interesting thing is that there was this shift in the PhytoplanktonCommunity but apparently no real reduction in Export! (This is in Taylor and Pinckney somehwere)
-this would be coherent with Pinckney, no real reduction in biomass, but shifts in the community and towards greater depth, talk about depth of the euphotic zone! also have that data thanks to JP and CBN
+The CARIACO time-series has been collecting detailed data on the phytoplankton community in the Cariaco Basin from 1995 to 2017 (see Section \ref{CARIACOintro} for a full description). What has been a particular focus of the research based on this data set is the apparent changes in environmental conditions documented in both the physical boundary conditions as well as the biological data. \citet{Taylor2012} described a state shift in the biotic community. Using the fluorometric $chl~a$ data collected their analysis proposes a reduction in phytoplankton biomass, coinciding with a reduction in nutrient upwelling. An increase in zooplankton abundances (although the measurements of this were only commenced in 2001) was linked to a collapse in sardine fisheries in the region (see Figure \ref{TaylorSHIFTS}). \citet{Pinckney2015} further expanded on this work by looking in detail at both the phytoplankton taxonomy data, as well as HPLC-derived $chl~a$ data. The HPLC-derived data showed no clear reduction in total $chl~a$ and spoke against a reduction in phytoplankton biomass. In comparison to the fluorometric method, HPLC can measure the concentrations of multiple pigment types and the total chlorophyll signal is less influenced by the specific pigment composition of the phytoplankton community. What the data showed specifically was that instead of a reduction in total chlorophyll within the water column, overall bloom intensity (i.e. the variability in biomass) decreased and phytoplankton moved to greater depth (see Figure \ref{TChlAPinckney}). This is also supported by irradiance measurements showing a reduction in the depth of the euphotic zone \citep{Pinckney2015}. Using the software CHEMTAX, the individual pigment composition can be used trace the proportion of total chlorophyll biomass that is substituted by the individual functional groups. This data was kindly supplied by James Pinckney and forms the basis of the planned study.
 
 \begin{figure}
 \centering
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=0.7\linewidth]{./Chp2-Pre/Tayloretal2012_F3.large.jpg}
-\caption[Scheme]{\small {"Shifts in phytoplankton community composition and sardine landings from the southeastern Margarita Island fishery. Monthly observations presented as gray symbols. Box and whisker plots depict binned annual variations in diatom (A), dinoflagellate (B), coccolithophorid (C) inventories integrated over the upper 55 m and sardine fishery landings (D) in metric tons. Boxes represent the interquartile range of all observations (25th to 75th percentiles). Internal horizontal lines and whiskers are medians and 10th to 90th percentiles, respectively. Blue and red horizontal lines represent the grand medians of all observations between 1996 and 2004 and between 2005 and 2009, respectively. Data in early and late bins are significantly different in all cases (ANOVA; P < 0.001). [Fishery data are courtesy of L. W. Gonzáles (Universidad de Oriente, Boca de Río, Isla de Margarita, Venezuela); zero values artificially set at 0.5 for plotting purposes.)" from \citet{Taylor2012}}}
+\caption[Scheme]{\small {"Shifts in phytoplankton community composition and sardine landings from the southeastern Margarita Island fishery. Monthly observations presented as gray symbols. Box and whisker plots depict binned annual variations in diatom (A), dinoflagellate (B), coccolithophorid (C) inventories integrated over the upper 55 m and sardine fishery landings (D) in metric tons. Boxes represent the interquartile range of all observations (25th to 75th percentiles). Internal horizontal lines and whiskers are medians and 10th to 90th percentiles, respectively. Blue and red horizontal lines represent the grand medians of all observations between 1996 and 2004 and between 2005 and 2009, respectively. Data in early and late bins are significantly different in all cases (ANOVA; P \textless 0.001). [Fishery data are courtesy of L. W. Gonzáles (Universidad de Oriente, Boca de Río, Isla de Margarita, Venezuela); zero values artificially set at 0.5 for plotting purposes.)" from \citet{Taylor2012}}}
 \label{TaylorSHIFTS}
 \end{figure}
-
-
-
-
-The term regime shift is actually not very well defined and has been used... \citep{DeYoung2004a}
-There are global trends and indications of a regime shift, but methods to identify regime shifts are not well established and have been critically discussed in the literature \citep{Steele2004a, Mantua2004a, Litzow2016a}. To my knowledge no formal exploration of a potential regime shift has been performed with the CARIACO data, therefore the term regime shift is used here to describe the observed changes in the phytoplankton community and physical environment without presupposing a formally defined state shift in the entire ecosystem. 
-
 
 \begin{figure}
 \centering
@@ -35,27 +22,6 @@ There are global trends and indications of a regime shift, but methods to identi
 \end{figure}
 
 
-Talk about the data again
-
-Also talk about mutshinda et al studies!
-Mutshinda study one, bayesian approach: \cite{Mutshinda2013a}
-
-Mutshinda study, same year, environmental factors: \cite{Mutshinda2013}
-
-culminated in the study in PNAS: "Phytoplankton adapt to a changing environment" \cite{Irwin2015}
-
-detailed phytoplankton data has been used in the previous studies for statistical analysis, but surprisingly not yet for ecosystem or trait-based modeling
-This will be a first! first proper ecological model apart from this Export Flux model only including diatoms \citep{Walsh2002a}
-
-FUNCTIONAL TYPES STRUCTURE --> explain linkage between Pigment Data that I use and functional diversity measurements (XMoreno et al. 2012X) take this from Pinckney et al. 2015...
-Thus, photopigment-based measures offer an efficient way to quantify community or functional diversity (X Moreno et al., 2012 X). (From Pinckney et al 2015) ..> this would also be good to discuss in part 4!
-
-bb
-
-
-LOOKING AT BIOMASS DYNAMICS, leading over from Intro where i mentioned JP CBN data at the end (ad-lib)
-XXX
-
 \begin{figure}
 \centering
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=.7\linewidth]{./Chp2-Pre/PFT_groupsAsset511.png}
@@ -63,33 +29,13 @@ XXX
 \label{PFTcariaco}
 \end{figure}
 
-EXPLAIN THE HYPOTHESES HERE; AND HOW THEY CAN BE TESteD
-
-Main hypothesis, based on top down and bottom up processes:
-Top down grazing has great influence on ecosystem, not just from biomass, but also biodiversity aspects \cite{Prowe2012c}.
-
-
-\section{Methods}
-
-MODEL STRUCTURE: 
-
-- Cyanos as of yet not implemented as nitrogen fixers, given simplicity of model formulation, but actually are present and could be included: \citep{Montes2013}
-
-dont really go into depth here, just generally state how things are done, python, odeint, system of ODEs
-
-COPY METHODS SECTION FROM PhytoSFDM in a way, but with the current model setup
-including the equations and allofthat!
-
-
 \begin{figure}
 \centering
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=1.\linewidth]{./Chp2-Pre/ModelSchematicsAsset1111.pdf}
-\caption[Scheme]{\small {Model schematics of current iteration of the ecosystem model.The ecosystem is embedded in a box of fixed depth. Nutrients below are assumed to be constant, mixing is a function MLD to simulate seasonal upwelling. XXXX}}
+\caption[Scheme]{\small {Model schematics of current iteration of the ecosystem model.The ecosystem is embedded in a box of fixed depth. Nutrients below are assumed to be constant, mixing is a function MLD to simulate seasonal upwelling. See the methods description for a full explanation of model components.}}
 \label{ModelSchematics}
 \end{figure}
-XXXX
 
-FORCING DATA
 
 \begin{figure}
 \centering
@@ -98,13 +44,37 @@ FORCING DATA
 \label{ModelForcing}
 \end{figure}
 
-\small {\textbf{Model physics in a tropical coastal setting}}
+The two regimes described by \citet{Pinckney2015} do not describe a formally analyzed time point, but rather are the two time periods were HPLC data coverage was given. The previous analysis by \citet{Taylor2012} places the changing point into the year 2005, which coincides with the time point right before the second time period where HPLC-data was continuously measured. The term regime shift is actually not very well defined and has been used uncritically in the scientific literature \citep{DeYoung2004a}. There are global trends and indications of a regime shift, but methods to identify regime shifts are not well established and have been critically discussed in the literature \citep{Steele2004a, Mantua2004a, Litzow2016a}. To my knowledge no formal exploration of a potential regime shift has been performed with the CARIACO data, therefore the term regime shift is used here to describe the observed changes in the phytoplankton community and physical environment without presupposing a formally defined state shift in the entire ecosystem. 
 
-xXXX
+The variability in environmental conditions in Cariaco between the two regimes can be seen in the aggregated model forcing (see Figure \ref{ModelForcing}). There is a clear reduction in MLD variability, which allows me to use this as one of the drivers of a possible regime shift, however I plan on performing a more formal analysis of the regime forcing in the future. The other main hypothesis that has been put forward as a possible explanation of the shifts in the phytoplankton community, in particular towards smaller sizes of phytoplankton, is the collapse in the sardine fisheries and the subsequent increase in zooplankton biomass. 
 
-Most models built for temperate oceans, since that is where reasearch (and funding) has been most well developed. Fasham NPZD type slabe physics explain.
-Why won't this fit well in the Cariaco setting? - mostly due to shallow and comparatively invariable MLD, and nutrient fluxes don't correlate.
-Problem of nutrient forcing! If MLD driven, nutrients below MLD are highly variable, only below 100m do we get towards a relatively constant N0 and Si0 (can show plots here!)
+Although the zooplankton data does not cover the the first time-period of HPLC-data coverage, there measurements of the $Phaeo$ pigment over the entire time period. $Phaeo$ pigment is a results of chlorophyll degradation and can be used as a proxy for zooplankton grazing pressure. The overall dynamics point towards an increase in grazing pressure, coinciding with the increase in zooplankton abundance that was documented \citep{Pinckney2015}. In the model the collapse of the sardine fisheries, an important grazer of zooplankton, can be directly implemented through the higher-order mortality term acting on zooplankton (see Figure \ref{ModelSchematics}). 
+
+As there has to date been no ecosystem modeling study performed in the region, I am using a relatively simple model formulation without an explicitly trait-based treatment of diversity. Instead I focus on resolving the phytoplankton and zooplankton functional types that were directly measured in the time-series. For phytoplankton, the data used is the functional-type resolved HPLC-derived $chl~a$ data presented by \citet{Pinckney2015} and kindly shared by James Pinckney. The CHEMTAX analysis resolved 7 functional types in total, based on the pigments that were measured. To simplify the implementation and parametrization of the model, these were aggregated to 5 groups as presented in Figure \ref{PFTcariaco}. As the groups of Cryptophytes, Prasinophytes and Chlorophytes do not present a unique biogeochemical role and showed similar dynamics, they were aggregated to the "Others" group. This is a preliminary grouping for initial analysis. Zooplankton were measured using bongo net tows with two different mesh sizes of 200 and 500 microns. The model resolves these as two separate zooplankton types.
+
+
+
+
+
+\section{Methods}
+
+{\bf {Model description}} 
+
+NPZD models are simplified marine ecosystem models that can be adapted to different physical settings and food web structures. For this model, the basic ecosystem structure is inspired by the models of Fasham (1990) as it was adapted by Anderson et al. (2015). The pyhsical setting of the model uses a zero-dimensional box structure where a fixed volume of water resides above a deep homogenous layer. The code structure is the PhytoMFTM model (as explained in Section 3) written in the open source programming language Python, which provides a flexible framework for NPZD-type models with multiple functional types of phytoplankton and zooplankton. The model code and all statistical scripts are available publicly on Github (\url{https://github.com/ben1post/BennyPhD}).
+
+The model framework was adapted to the setting of the CARIACO time-series in the Cariaco basin of the coast of Venezuela. The data includes phytoplankton functional-type resolved HPLC data and two size-classes of zooplankton, which were included in the model as the 5 phytoplankton types, and 2 zooplankton types. The phytoplankton types include Diatoms $P_{d}$, Haptophytes $P_{h}$, Dinoflagellates $P_{f}$, Cyanobacteria $P_{c}$ and Others (representing a generalized small green algae) $P_{o}$. There are two Zooplankton types split by size class, named Mikrozooplankton $Z_{\mu}$ and Mesozooplankton $Z_{\lambda}$. 
+
+Nitrogen $N$ (and Silicate $Si$ for Diatoms) is assimilated by the phytoplankton types $P_i$, which are grazed by the zooplankton types $Z_j$. Mortality of and excretion from phytoplankton and zooplankton, and sloppy feeding by zooplankton contribute to Detritus $D$. In addition to the linear mortality of $P_i$ and $Z_j$, there is an additional quadratic mortality term acting on $Z_j$, which represents higher-order predation on zooplankton. Other nutrients are not implemented yet, but might be as the work progresses. The functional types differe as of yet only in their nutrient uptake dynamics and growth rates. Nitrogen-fixation of Cyanobacteria, which has been documented in the Cariaco Basin \citep{Montes2013}, could also be explicitly included, but has not been to date. 
+
+{\textbf{Model physics in a tropical coastal setting}}
+
+The ecosystem component of the model is set within a zero-dimensional physical environment. The water column is divided into a box of 100 meters depth, above a homogenous deep layer. There is no lateral advection, but vertical mixing is modeled as a function of mixed layer depth (MLD) over time $M(t)$. Temperature depth profiles have been used to reconstruct the MLD at the investigated location. The derivative of MLD over time is given as $h(t) = dM(t)$. Exchange between the two layers is described by the two processes of turbulent diffusion and upwelling, with the depth of the MLD as a proxy for the strength of exchange between the two layers. The effects of entrainment and detrainment on nutrients, are given by the term $h^{+}(t)= max[h(t),0]$. Phytoplankton and detritus are assigned a constant sinking rate as of now, but this could be also be modified as a function of MLD depth. Zooplankton is assumed to be able to maintain themselves within the model boy, therefore $Z_j$ is not modified by the upwelling term. Diffusive mixing between the layers has been parameterized with a constant factor $k$. The entire upwelling term is thus
+\begin{equation}
+\kappa = \frac{k + h^{+}(t)}{M(t)}
+\end{equation}
+In addition to the MLD interpolated from time series data, the model is externally forced with sea surface temperature (SST) and interpolated from monthly to daily values and photosynthetically active radiation (PAR) from monthly averaged SeaWIFs satellite data.
+
+This model construct is a preliminary modification of the typical slab model, as described in \citet{Anderson2015}. A slab model describes the ecosystem component above a variable MLD, however this is not suitable in the tropical coastal location of the Cariaco Basin, as exemplified in Figure \ref{BelowMLD}. Since the MLD is much shallower than in temperate settings, there is no constant nutrient concentration below the MLD, instead it is highly variable. In addition to this, in a typical slab model phytoplankton below the MLD is not described. In temperate settings the MLD can reach far below 100m and thereby far below the euphotic zone. In Cariaco the MLD is generally above the euphotic zone and there is a considerable concentration of phytoplankton growing below the MLD. Therefore the box model structure, resolving the top 100 m was adopted.
 
 
 \begin{figure}
@@ -114,41 +84,15 @@ Problem of nutrient forcing! If MLD driven, nutrients below MLD are highly varia
 \label{BelowMLD}
 \end{figure}
 
-Moved from slab physics of PhytoSFDM model \citep{Acevedo-Trejos2016} which is based on Fasham \citep{Evans2003,Fasham1990a} to a box model formulation adapted from Tyrrell \citep{Tyrrell1999}
-The specific differences are (show equations):
 
-HERE I CAN SHOW THE DIFFERENT MODEL RUNS, explain the difference
-for this box model needs to get running! This won't be so easy.. so plan ample time my friend!
 
-XXXX
-
-XXXX
-
-XXX
-
-{\bf {\large A1. CARIACO model description}} 
-
-NPZD models are simplified marine ecosystem models that can be adapted to different physical settings and food web structures. For this model, the basic structure is inspired by the models of Fasham (1990) as it was adapted by Anderson et al. (2015). The pyhsical setting of the model uses a zero-dimensional slab structure as originally presented in Evans and Parslow (1985) and adapted from Acevedo-Trejos et al. (2015) where the ecosystem is described within a seasonally varying surface mixed layer above a deep homogenous layer. The code structure is the PhytoMFTM model written in the open source programming language Python, which provides a flexible framework for NPZD-type models with multiple functional types of phytoplankton and zooplankton. The model code and all statistical scripts are available publicly on Github (\url{https://github.com/ben1post/BennyPhD}).
-
-The model framework was adapted to the setting of the CARIACO time-series in the Cariaco basin of the coast of Venezuela. The data includes phytoplankton species counts and two size-classes of zooplankton, which were included in the model as the 4 most prominent phytoplankton types, and 2 zooplankton types. The phytoplankton types include Nanoflagellates $P_{n}$, Diatoms $P_{dt}$, Coccolithophores, $P_{c}$ and Dinoflagellates $P_{dn}$. There are two Zooplankton types split by size class, named Mikrozooplankton $Z_{\mu}$ and Mesozooplankton $Z_{\lambda}$. 
-
-Nitrogen $N$ (and Silicate $Si$ for Diatoms) is assimilated by the phytoplankton types $P_i$, which are grazed by the zooplankton types $Z_j$. Mortality of and excretion from phytoplankton and zooplankton, and sloppy feeding by zooplankton contribute to Detritus $D$. In addition to the linear mortality of $P_i$ and $Z_j$, there is an additional quadratic mortality term acting on $Z_j$, which represents higher-order predation on zooplankton.
-
-{\bf {\large A1.1 Physical setting}}
-
-The ecosystem component of the model is set within a zero-dimensional physical environment. The water column is divided into a 2-layer structure. A depth variable layer (e.g. the thermo- and/or pycnocline) separates a well-mixed surface layer containing the ecosystem component from a homogenous deep ocean. Concentrations of nutrients are averaged across the mixed layer, and remain constant below.  There is no lateral advection, but vertical mixing is modeled as a function of mixed layer depth (MLD) over time $M(t)$. Temperature depth profiles have been used to reconstruct the MLD at the investigated location. The derivative of MLD over time is given as $h(t) = dM(t)$. Exchange between the two layers is described by the two processes of turbulent diffusion and entrainment or detrainment caused by a shallowing or deepening of MLD. Adapted from Fasham (1993), the effects of entrainment and detrainment on nutrients, phytoplankton and detritus are given by the term $h^{+}(t)= max[h(t),0]$. Zooplankton is assumed to be able to maintain themselves within the mixed layer depth, therefore entrainment and detrainment of $Z_j$ are described by $h(t)$. Diffusive mixing between the layers has been parameterized with a constant factor $k$. The entire diffusion term is thus
-\begin{equation}
-\kappa = \frac{k + h^{+}(t)}{M(t)}
-\end{equation}
-In addition to the MLD interpolated from time series data, the model is externally forced with sea surface temperature (SST) taken from in situ data and interpolated from monthly to daily values and photosynthetically active radiation (PAR) from 8-day averaged SeaWIFs satellite data.
-
-{\bf {\large A1.2 Phytoplankton}}
+{\bf {Phytoplankton}}
 
 Phytoplankton growth is a function of light (PAR), temperature (SST) and nutrients. These factors are assumed to independently limit growth, so that (exemplary for $P_{d}$, i.e. diatoms) the growth term is
 \begin{equation}
 \mu_{d} = \mu_{d}^{max} \cdot U_{d}(N,Si)\cdot L_{d}(PAR)\cdot T_{d}(SST)
 \end{equation}
-where $\mu_{d}$ is the maximum growth rate per day and $T(PAR)$ is Eppleys formulation for temperature dependent growth (Eppley, 1972), given as $T(SST) = e^{0.063 * SST}$ with temperature in $^\circ C$. The light-limiting term $L(PAR)$ represents the integrated photosynthesis within the mixed layer as a function of incident irradiance at the surface $I_0$. Light attenuation is calculated using the Lambert-Beer law with irradiance at depth $z$ equal to
+where $\mu_{d}$ is the maximum growth rate per day and $T(PAR)$ is Eppleys formulation for temperature dependent growth, given as $T(SST) = e^{0.063 * SST}$ with temperature in $^\circ C$. The light-limiting term $L(PAR)$ represents the integrated photosynthesis within the mixed layer as a function of incident irradiance at the surface $I_0$. Light attenuation is calculated using the Lambert-Beer law with irradiance at depth $z$ equal to
 \begin{equation}
 I(z) = I_0 \cdot e^{-k_{PAR} \cdot z}
 \end{equation}
@@ -156,7 +100,7 @@ Here, $k_{PAR}$ is calculated as the sum of the constant attenuation coefficient
 \begin{equation}
 V_p = \frac{\alpha \cdot I \cdot V_p^{Max}} {\sqrt{(V_p^{Max})^2 + \alpha^2 \cdot I^2}}
 \end{equation}
-Combining equation (2) and (3) as presented in Anderson et al. (2015), the integrated photosynthesis $\bar{V}_p$ over depth $z$ is calculated as
+Combining equation (2) and (3) as presented in \cite{Anderson2015}, the integrated photosynthesis $\bar{V}_p$ over depth $z$ is calculated as
 \begin{equation}
 \bar{V}_p(z) = \frac{V_p^{Max}}{k_{PAR} \cdot z} \cdot \ln \Bigg( \frac{\alpha \cdot I_0 + \sqrt{(V_p^{Max})^2+(\alpha \cdot I_0)^2}} {\alpha \cdot I(z) + \sqrt{(V_p^{Max})^2+(\alpha \cdot I(z))^2}} \Bigg)
 \end{equation}
@@ -170,12 +114,12 @@ For diatoms $P_d$ the nutrient limiting term depends on both nitrogen and silica
 \begin{equation}
 U_{d}(N,Si) = min \Big( \frac{N} {k_{d}^N + N}, \frac{Si} {k_{d}^{Si} + Si} \Big)
 \end{equation}
-All other phytoplankton types are nutrient-limited only by available Nitrogen as in equation (6). Phytoplankton mortality and excretion are parameterized as a linear constant rate $mo$. With $G_{\mu}$ as grazing by Microzooplankton and $G_{\lambda}$ as grazing by Mesozooplankton (defined below), the equations for all phytoplankton types $P_i$ can now be written as
+All other phytoplankton types are nutrient-limited only by available Nitrogen as in equation (6). Phytoplankton mortality and excretion are parameterized as a linear constant rate $mo$. Phytoplankton sinking is defined by the parameter $v$.With $G_{\mu}$ as grazing by Microzooplankton and $G_{\lambda}$ as grazing by Mesozooplankton (defined below), the equations for all phytoplankton types $P_i$ can now be written as
 \begin{equation}
-\frac{dP_{i}}{dt} = \mu_{i} \cdot P_{i} - mo_{i} \cdot P - G_{\mu}(P_{i}) - G_{\lambda}(P_{i}) - \kappa \cdot P_{i}
+\frac{dP_{i}}{dt} = \mu_{i} \cdot P_{i} - mo_{i} \cdot P - G_{\mu}(P_{i}) - G_{\lambda}(P_{i}) - v \cdot P_{i}
 \end{equation}
 
-{\bf {\large A1.3 Zooplankton}}
+{\bf {Zooplankton}}
 
 Two zooplankton types are resolved in the model according to size-class, Microzooplankton $Z_{\mu}$ and Mesozooplankton $Z_{\lambda}$. Following Anderson et al. (2015) the grazing of, for example, $Z_{\lambda}$ on diatoms $P_d$ is formulated as follows
 
@@ -189,16 +133,14 @@ with $\mu^Z_{\lambda}$ as the maximum grazing rate, $k^Z_{\lambda}$ as the half 
 
 
 
-{\bf {\large A1.x Solving method}}
+{\bf {Solving method}}
 
 The system of differential equations was solved numerically using the fourth-order Runge-Kutta method in the odeint function of the scipy package in python 3.7. 
 
-Physical forcing is interpolated ... Taken from the regimes ... etc.
 
 
-{\bf {\large Full System of equations}}
-
-\begin{eqnarray}
+{\bf {Full System of equations}}
+\begin{eqnarray*}
 \frac{\partial N}{\partial t} & = & 
 \kappa \cdot \left(N_{0} - N\right) + 
 \delta^{N}_{D} \cdot D -
@@ -210,186 +152,78 @@ Physical forcing is interpolated ... Taken from the regimes ... etc.
 \nonumber \\
 \frac{\partial P_{i}}{\partial t} & = & 
 \mu_{i} \cdot U_{i}(N_0,Si_0)\cdot L_{i}(PAR)\cdot T_{i}(SST) \cdot P_{i}
-- m_{i} \cdot P_{i}
-- \sum_{j=1}^{n_Z} [I^{tot}_j \frac{p^i_{j} \cdot P_{i}} {R_{j}} Z_{j}] -
-\frac{v}{M(t)} \cdot P_{i} -
-\kappa \cdot P_{i}
+- m_{i} \cdot P_{i} \\
+&& - \sum_{j=1}^{n_Z} [I^{tot}_j \frac{p^i_{j} \cdot P_{i}} {R_{j}} Z_{j}] -
+v\cdot P_{i} 
 \nonumber \\
 \frac{\partial Z_{\mu}}{\partial t} & = & 
 \delta_Z \cdot I^{tot}_{\mu} \cdot Z_{\mu}-
 \mu^{}_{\lambda} \frac{Z_{\mu}}{Z_{\mu}+k_{\lambda}} Z_{\lambda}-
-\kappa_{Z} \cdot Z_{\mu} -
 m_{\mu} \cdot Z_{\mu} - 
 g_{\mu} \cdot Z_{\mu}^{2}
 \nonumber \\
 \frac{\partial Z_{\lambda}}{\partial t} & = & 
 \delta_Z \cdot I^{tot}_{\lambda} \cdot Z_{\lambda}+
 \delta_{\lambda} \cdot \mu^{}_{\lambda} \frac{Z_{\mu}}{Z_{\mu}+k_{\lambda}} Z_{\lambda}-
-\kappa_{Z} \cdot Z_{\lambda} -
 m_{\lambda} \cdot Z_{\lambda} - 
 g_{\lambda} \cdot Z_{\lambda}^{2}
 \nonumber \\
 \frac{\partial D}{\partial t} & = & 
 \sum_{j=1}^{n_Z} [(1-\delta_Z) I^{tot}_j \cdot Z_{j}] +
-(1-\delta_{\lambda}) \cdot \mu^{}_{\lambda} \frac{Z_{\mu}}{Z_{\mu}+k_{\lambda}} Z_{\lambda}-
-\sum_{j=1}^{n_Z} [m_j \cdot Z_{j}] +
+(1-\delta_{\lambda}) \cdot \mu^{}_{\lambda} \frac{Z_{\mu}}{Z_{\mu}+k_{\lambda}} Z_{\lambda} \\
+&& -\sum_{j=1}^{n_Z} [m_j \cdot Z_{j}] +
 \sum_{i=1}^{n_P} [m_i \cdot P_{i}] -
-\kappa \cdot D -
+v_{D} \cdot D -
 \delta^{N}_{D} \cdot D
 \nonumber
-\end{eqnarray}
+\end{eqnarray*}
  
 where:\\
-\mbox{} \hspace{.5cm} $N_0=$ Nitrogen concentration right below mixed layer [$\mu M$],\\
-\mbox{} \hspace{.5cm} $N=$ Nitrogen concentration above mixed layer [$\mu M$],\\
-\mbox{} \hspace{.5cm} $v=$ sinking rate of $P_i$ [$m$ $day^{-1}$],\\
-\mbox{} \hspace{.5cm} $M(t)=$ mixed layer depth at time point $t$ [$m$],\\
-\mbox{} \hspace{.5cm} $\kappa = \frac{1}{M(t)} \cdot \left(h^{+}(t) + \kappa\right)$ Constant that parameterizes diffusive mixing across the thermocline, \\
-\mbox{} \hspace{.5cm} $h^{+}(t) = \max\left(0, \frac{d}{d t} M(t)\right)$ Function that describes entrainment and detrainment of material,\\
-\mbox{} \hspace{.5cm} $\delta^N_D=$ Remineralization rate of nitrogen component of detritus $D$ [$\mu M d^{-1}$],\\
-\mbox{} \hspace{.5cm} $\mu_i=$Growth rate of phytoplankton type $i$ [$d^{-1}$],\\
-
-
-\mbox{} \hspace{.5cm} $U_i=\begin{cases}\min\left(\frac{N}{N + U^{N}_i}, \frac{Si}{Si + U^{Si}_i}\right),& \text{if P-type is Diatom}\\\frac{N}{N + U^{N}_i}, & \text{otherwise}\end{cases}$ Nutrient uptake of phytoplankton $i$,\\
-
-\mbox{} \hspace{.5cm} $L_i=\frac{1}{M(t) \cdot k_{w}} \cdot \left(e^{1 - \frac{PAR(t)}{Opt^{I}_i}} + e^{1 - \frac{PAR(t)}{Opt^{I}_i} \cdot e^{- M(t) \cdot k_{w}}}\right)$ Light dependence of  phytoplankton $i$,\\
-\mbox{} \hspace{.5cm} $T_i= e^{0.063 \cdot SST}$ Temperature dependence of phytoplankton $i$,\\
-
-\mbox{} \hspace{.5cm} $P_i=$ Biomass of phytoplankton type $i$ [$\mu M N$],\\
-\mbox{} \hspace{.5cm} $m_i=$ Mortality/excretion rate for phytoplankton type $i$,\\
-
-\mbox{} \hspace{.5cm} $I^{tot}_j= \mu^{Z}_j \cdot \frac{R_{j}}{R_{j} + k^Z_j}$ Total intake of zooplankton type $j$,\\
-\mbox{} \hspace{.5cm} $k^Z_j =$ Half saturation constant of zooplankton type $j$,\\
-\mbox{} \hspace{.5cm} $R_{j}= \sum_{i} (p_{i j} \cdot P_{i})$ Total ressource density of zooplankton type $j$,\\
-\mbox{} \hspace{.5cm} $p^i_{j}=$ Feeding preference of zooplankton type $j$ feeding on phytoplankton type $i$,\\
-\mbox{} \hspace{.5cm} $R_{\mu}= p^n_{\mu} \cdot P_{n} + p^{dn}_{\mu} \cdot P_{dn} + p^c_{\mu} \cdot P_{c}$ Total ressource density of Mikrozooplankton $Z_{\mu}$,\\
-\mbox{} \hspace{.5cm} $R_{\lambda}= p^{dt}_{\lambda} \cdot P_{dt} + p^{dn}_{\lambda} \cdot P_{dn} + p^c_{\lambda} \cdot P_{c}$ Total ressource density of Mesozooplankton $Z_{\lambda}$,\\
-
-
-
-\mbox{} \hspace{.5cm} $Z_j=$ Biomass of zooplankton type $j$ [$\mu M N$],\\
-\mbox{} \hspace{.5cm} $\delta_{Z}=$ Grazing efficiency of zooplankton on phytoplankton (represents sloppy feeding), \\
-\mbox{} \hspace{.5cm} $K_{Z}=\frac{1}{M(t)} \cdot \frac{d}{d t} M(t)$ Mixing term of zooplankton, \\
-\mbox{} \hspace{.5cm} $g_{i}=$ Higher order predation on zooplankton (quadratic), \\
-\mbox{} \hspace{.5cm} $m_{j}=$ Mortality/excretion rate for zooplankton type $j$,\\
-
-
-
-\vspace{.2cm}
-%
-%{\it {\bf A1.1. Physical structure:}}\\
-%
-%It is a slab model for now, but might make sense to include depth layering, or euphotic zone depth, etc.. can take some of the cues for slab models from EMPOWER-1.0
-%\vspace{.2cm}
-%
-%
-
-\thispagestyle{empty}
-
-\section*{PhytoMFTM model parameters (preliminary)}
+\mbox{} \hspace{0 cm} $N_0=$ Nitrogen concentration right below mixed layer [$\mu M$],\\
+\mbox{} \hspace{0 cm} $N=$ Nitrogen concentration above mixed layer [$\mu M$],\\
+\mbox{} \hspace{0 cm} $v=$ sinking rate of $P_i$ [$m$ $day^{-1}$],\\
+\mbox{} \hspace{0 cm} $M(t)=$ mixed layer depth at time point $t$ [$m$],\\
+\mbox{} \hspace{0 cm} $\kappa = \frac{1}{M(t)} \cdot \left(h^{+}(t) + \kappa\right)$ Constant that parameterizes diffusive mixing, \\
+\mbox{} \hspace{0 cm} $h^{+}(t) = \max\left(0, \frac{d}{d t} M(t)\right)$ Function that describes upwelling as function of MLD,\\
+\mbox{} \hspace{0 cm} $\delta^N_D=$ Remineralization rate of nitrogen component of detritus $D$ [$\mu M d^{-1}$],\\
+\mbox{} \hspace{0 cm} $v_D=$ sinking rate of $D$ [$m$ $day^{-1}$],\\
+\mbox{} \hspace{0 cm} $\mu_i=$Growth rate of phytoplankton type $i$ [$d^{-1}$],\\
+\noindent
+\mbox{} \hspace{0 cm} $U_i=\begin{cases}\min\left(\frac{N}{N + U^{N}_i}, \frac{Si}{Si + U^{Si}_i}\right),& \text{if P-type is Diatom}\\\frac{N}{N + U^{N}_i}, & \text{otherwise}\end{cases}$ Nutrient uptake of $P_i$,\\
+\noindent
+\mbox{} \hspace{0 cm} $L_i=\frac{1}{M(t) \cdot k_{w}} \cdot \left(e^{1 - \frac{PAR(t)}{Opt^{I}_i}} + e^{1 - \frac{PAR(t)}{Opt^{I}_i} \cdot e^{- M(t) \cdot k_{w}}}\right)$ Light dependence of  $P_i$,\\
+\mbox{} \hspace{0 cm} $T_i= e^{0.063 \cdot SST}$ Temperature dependence of $P_i$,\\
 
 \noindent
-\begin{tabular}{llllllllll}
-
-  symbol               & variable   & description & units   & value      & source\\
-  \hline
-  \multicolumn{3}{l}{Physical parameters:}\\
-  \hline
-  $\kappa$ & kappa & diffusive mixing constant & [$m$ $day^{-1}$] & 0.1/0.01 & [Fasham, 1990/1993]\\
-  $\delta^{N}_{D}$ & deltaD\_N  & remineralization rate & [$day^{-1}$] & 0.05 & [Fasham, 1990]\\
-  $k_w$ & kw & light attenuation coefficient & [$m^{-1}$] & 0.2 & [Edwards \& Brindley 1996]\\                           
-  \multicolumn{3}{l}{affecting phytoplankton:} \\
-  $v$ & v &  phytoplankton sinking constant & $[m day^{-1}]$ & 0.04 & [Edwards \& Brindley 1996]\\                      
-  $I_{opt}$ & OptI & optimum irradiance & [$E$ $m^{-2}$ $day^{-1}$] & 30 & [Acevedo-Trejos, 2015]\\
-  \\
-  \hline
-  \multicolumn{3}{l}{Phytoplankton parameters:}\\
-  \hline
-  $mo_P$ & moP &  mortality/excretion constant & [$day^{-1}$] & 0.09 & [Fasham, 1990]\\
-  \\
-  \multicolumn{3}{l}{functional type specific:} \\
-  $P_{dt}$ & pt1  & Diatoms\\
-  \hline
-  $\Delta^{dt}_{Si}$ & pt1\_ratioSi & nitrogen to silicate ratio & [$\mu M Si$ $\mu M N^{-1}$] & 1.12 & [Brzezinski, 1985]  \\
-  $K^{dt}_{Si}$ & pt1\_K\_Si & half-saturation constant of Si uptake & [$\mu M Si$] & 2 & [Kristiansen et al. 2000]\\
-  $U^{dt}_N$ & pt1\_U\_N & half-saturation constant of N uptake & [$\mu M N$] &  0.446 & [Litchman et al. 2007]\\
-  $\mu^{dt}_P$ & pt1\_muP & growth rate & [$day^{-1}$] & 1.5 & [Litchman et al. 2007]\\
-  \\
-  $P_{c}$ & pt2 & Coccolithophores\\
-  \hline
-  $U^{c}_N$ & pt2\_U\_N & half-saturation constant of N uptake & [$\mu M N$]  &  0.265 & [Litchman et al. 2007]\\
-  $\mu^{c}_P$ & pt2\_muP  & growth rate & [$day^{-1}$]& 1.1 & [Litchman et al. 2007] \\
-  \\
-  $P_{dn}$ & pt3 & Dinoflagellates\\
-  \hline
-  $U^{c}_N$ & pt3\_U\_N & half-saturation constant of N uptake & [$\mu M N$]  &  0.009 & [Litchman et al. 2007]\\
-  $\mu^{c}_P$ & pt3\_muP  & growth rate & [$day^{-1}$] & 0.6 & [Litchman et al. 2007]\\
-  \\
-  $P_{n}$ & pt4 & Nanoflagellates\\
-  \hline
-  $U^{n}_N$ & pt4\_U\_N & half-saturation constant of N uptake & [$\mu M N$]  &  0.045 & [Litchman et al. 2007]\\
-  $\mu^{n}_P$ & pt4\_muP  & growth rate & [$day^{-1}$] & 1.7 & [Litchman et al. 2007]\\
-
-  \\
-  \hline
-  \multicolumn{3}{l}{Zooplankton parameters:} \\
-  \hline
-  $mo_Z$ & moZ &  mortality/excretion constant & [$day^{-1}$] & 0.0125 & [Prowe et al. 2012]\\
-  $\delta_Z$ & deltaZ & assimilation coefficient of grazing on $P_i$ & [-] & 0.75 & [Fasham, 1990]\\
-  $\delta_{\lambda}$ & deltaLambda & assimilation coefficient of $Z_{\lambda}$ grazing on $Z_{\mu}$ & [-] & 0.75 & [Fasham, 1990]\\ 
-  $\mu_{\lambda}$ & muIntGraze & maximum rate of $Z_{\lambda}$ grazing on $Z_{\mu}$ & [$day^{-1}$] & 0.05 & [?]\\
-  $k_{\lambda}$ & kIntGraze & half-saturation constant of $Z_{\lambda}$ grazing on $Z_{\mu}$ & [$\mu M N$] & 0.5 & [?]\\ 
-  \\
-  $Z_{\mu}$ & zt1 & Mikrozooplankton\\
-  \hline
-  $\mu^{\mu}_Z$ & zt1\_muZ & maximum rate of grazing on $P_i$ & [$day^{-1}$] & 0.1 & [Prowe et al. 2012]\\ 
-  $k^{\mu}_P$ & zt1\_Kp  & half-saturation constant of grazing on $P_i$ & [$\mu M N$] & 0.5 & [Prowe et al. 2012]\\
-  $g_{\mu}$ & zt1\_pred & higher order predation on $Z_{\mu}$ & [$day^{-1}$] & 0.01 & [?]\\  
-  \\
-  $Z_{\lambda}$ & zt2 & Mesozooplankton\\
-  \hline
-  $\mu^{\lambda}_Z$ & zt2\_muZ & maximum rate of grazing on $P_i$ & [$day^{-1}$] & 0.1 & [Prowe et al. 2012]\\ 
-  $k^{\lambda}_P$ & zt2\_Kp  & half-saturation constant of grazing on $P_i$ & [$\mu M N$] & 0.5 & [Prowe et al. 2012]\\
-  $g_{\lambda}$ & zt2\_pred & higher order predation on $Z_{\lambda}$ & [$day^{-1}$] & 0.01 & [?]\\
-  \\
-  
-  \hline
-  \hline
-\end{tabular}
-\\\\\\\\
-Feeding preferences: \\
+\mbox{} \hspace{0 cm} $P_i=$ Biomass of phytoplankton type $i$ [$\mu M N$],\\
+\mbox{} \hspace{0 cm} $m_i=$ Mortality/excretion rate for phytoplankton type $i$,\\
 \noindent
-\begin{tabular}{l|l|l|l|l}
- 
-  & $P_{dt}$ & $P_{c}$ & $P_{dn}$ & $P_{n}$\\
-\hline
-$Z_{\mu}$ & 0 & 1 & 1 & 1\\
-\hline
-$Z_{\lambda}$ & 1 & 1 & 1 & 0\\
-\hline
-\end{tabular}
-\\
-where number is $p^i_j$ denoting feeding preference of $Z_j$ grazing on $P_i$
+\mbox{} \hspace{0 cm} $I^{tot}_j= \mu^{Z}_j \cdot \frac{R_{j}}{R_{j} + k^Z_j}$ Total intake of zooplankton type $j$,\\
+\mbox{} \hspace{0 cm} $k^Z_j =$ Half saturation constant of zooplankton type $j$,\\
+\mbox{} \hspace{0 cm} $R_{j}= \sum_{i} (p_{i j} \cdot P_{i})$ Total ressource density of zooplankton type $j$,\\
+\mbox{} \hspace{0 cm} $p^i_{j}=$ Feeding preference of zooplankton type $j$ feeding on phytoplankton type $i$,\\
+\mbox{} \hspace{0 cm} $R_{\mu}= p^n_{\mu} \cdot P_{n} + p^{dn}_{\mu} \cdot P_{dn} + p^c_{\mu} \cdot P_{c}$ Total ressource density of Mikrozooplankton $Z_{\mu}$,\\
+\mbox{} \hspace{0 cm} $R_{\lambda}= p^{dt}_{\lambda} \cdot P_{dt} + p^{dn}_{\lambda} \cdot P_{dn} + p^c_{\lambda} \cdot P_{c}$ Total ressource density of Mesozooplankton $Z_{\lambda}$,\\
 
 
-
-End Methods here
+\noindent
+\mbox{} \hspace{0 cm} $Z_j=$ Biomass of zooplankton type $j$ [$\mu M N$],\\
+\mbox{} \hspace{0 cm} $\delta_{Z}=$ Grazing efficiency of zooplankton on phytoplankton (represents sloppy feeding), \\
+\mbox{} \hspace{0 cm} $g_{i}=$ Higher order predation on zooplankton (quadratic), \\
+\mbox{} \hspace{0 cm} $m_{j}=$ Mortality/excretion rate for zooplankton type $j$,\\
 
 \section{Preliminary Results}
 
+The model as described is up and running, preliminary results are shown in Figure \ref{PrelimRes}. As these are the results of using a parameter fitting routine implemented in the PhytoMFTM framework, the results are as of yet not entirely reasonable. One zooplankton type dominates, whilst the other is outcompeted. However the model is able to roughly recreate the nutrient dynamics observed in the first regime. The regimes are as defined by the HPLC data coverage, and the first regime will be used to create a baseline run to test the hypotheses on. Upwelling of nutrients can be modeled using the MLD forcing of the second regime and the collapse in sardine fisheries can be approximated with a reduction in the higher-order mortality term of zooplankton. As the model physics are not yet settled, this will have an effect on the observed dynamics and comprehensive parameter fitting will be performed later on. 
 
-SHOW PROPER RUN, With Biotic components fitting the base run comparatively well, try it!
-
-XXXX (Figure \ref{RegSizeFrac}).
-
-
-
-$kkkkkkkkkkkkkkkkkkkkkk$ here the results start, at least the text of it
-
-$^{\circ}$C$^{\circ}$\%$^{\circ}$C$^{\circ}$\%$^{\circ}$C$^{\circ}$\%$^{\circ}$C$^{\circ}$\%
+\begin{figure}
+\centering
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=1.\linewidth]{./Chp2-Pre/Figure_1.png}
+\caption[Scheme]{\small {Current best fit of preliminary model. Data is shown as dots, model results by continuous line. Model output is in units of $\mu M$ converted to integrated chlorophyll to compare to depth-integrated PFT $chl a$ pigment data.  Nutrient and detritus data was measured in $\mu M$. Zooplankton dry weight is converted by a carbon content of 32\% and a constant C:N ratio of 5.625. Clearly the model parameters are not ideal yet, however a general agreement with the PFT data and nutrient dynamics can be observed. Zooplankton parameters need to be adjusted to allow for a more realistic response.}}
+\label{PrelimRes}
+\end{figure}
 
 
-get it, get it
 
 
 
