--- a/PhDProposal 01/proposal.bib
+++ b/PhDProposal 01/proposal.bib
@@ -1,3 +1,70 @@
+@article{Anderson2015,
+abstract = {Modelling marine ecosystems requires insight and judgement when it comes to deciding upon appropriate model structure, equations and parameterisation. Many processes are relatively poorly understood and tough decisions must be made as to how to mathematically simplify the real world. Here, we present an efficient plankton modelling testbed, EMPOWER-1.0, coded in the freely available language R. The testbed uses simple two-layer "slab" physics whereby a seasonally varying mixed layer which contains the planktonic marine ecosystem is positioned above a deep layer that contains only nutrient. As such, EMPOWER-1.0 provides a readily available and easy to use tool for evaluating model structure, formulations and parameterisation. The code is transparent and modular such that modifications and changes to model formulation are easily implemented allowing users to investigate and familiarise themselves with the inner workings of their models. It can be used either for preliminary model testing to set the stage for further work, e.g., coupling the ecosystem model to 1-D or 3-D physics, or for undertaking front line research in its own right. EMPOWER-1.0 also serves as an ideal teaching tool. In order to demonstrate the utility of EMPOWER-1.0, we carried out both a parameter tuning exercise and structural sensitivity analysis. Parameter tuning was demonstrated for four contrasting ocean sites, focusing on Station India in the North Atlantic (60° N, 20° W), highlighting both the utility of undertaking a planned sensitivity analysis for this purpose, yet also the subjectivity which nevertheless surrounds the choice of which parameters to tune. Structural sensitivity tests were then performed comparing different equations for calculating daily depth-integrated photosynthesis, as well as mortality terms for both phytoplankton and zooplankton. Regarding the calculation of daily photosynthesis, for example, results indicated that the model was relatively insensitive to the choice of photosynthesis–irradiance curve, but markedly sensitive to the method of calculating light attenuation in the water column. The work highlights the utility of EMPOWER1.0, and simple models in general, as a means of comprehending, diagnosing and formulating equations for the dynamics of marine ecosystems.},
+author = {Anderson, T. R. and Gentleman, W. C. and Yool, A.},
+doi = {10.5194/gmd-8-2231-2015},
+file = {:Users/bp/Documents/Mendeley Desktop/gmd-8-2231-2015.pdf:pdf},
+issn = {19919603},
+journal = {Geoscientific Model Development},
+mendeley-groups = {To Read!/MODEL in R,PUBLICATION/Methods Section Inspiration},
+number = {7},
+pages = {2231--2262},
+title = {{EMPOWER-1.0: An Efficient Model of Planktonic ecOsystems WrittEn in R}},
+volume = {8},
+year = {2015}
+}
+
+
+@article{RykielJr1996,
+author = {{Rykiel Jr}, Edward J},
+file = {:Users/bp/Documents/Mendeley Desktop/Rykiel Jr - 1996 - Testing ecological models the meaning of validation.pdf:pdf},
+issn = {0304-3800},
+journal = {Ecological modelling},
+mendeley-groups = {To Read! newer stuff,PhD Proposal BibTex/cited},
+number = {3},
+pages = {229--244},
+publisher = {Elsevier},
+title = {{Testing ecological models: the meaning of validation}},
+volume = {90},
+year = {1996}
+}
+
+
+@article{Hutchinson1961,
+abstract = {The problem that I wish to discuss in the present contribution is raised by the very paradoxical situation of the plankton, particularly the phyto- plankton, of relatively large bodies of water.},
+author = {Hutchinson, G. E.},
+doi = {10.1086/282171},
+file = {:Users/bp/Documents/Mendeley Desktop/hutchinson1961.pdf:pdf},
+issn = {0003-0147},
+journal = {The American Naturalist},
+mendeley-groups = {DAAD app,PhD Proposal BibTex/cited},
+number = {882},
+pages = {137--145},
+publisher = {Science Press},
+title = {{The Paradox of the Plankton}},
+volume = {95},
+year = {1961}
+}
+
+
+@article{Astor2013,
+author = {Astor, Yrene M and Fanning, Kent and Guzm{\'{a}}n, Laurencia and Li, Xiaoni and Lorenzoni, Laura and Masserini, Robert and Muller-Karger, Frank and Tappa, Eric and Varela, Ram{\'{o}}n},
+publisher = {Fundaci{\'{o}}n La Salle de Ciencias Naturales},
+title = {{Handbook of Methods for the Analysis of Oceanographic Parameters at the CARIACO Time-series Station: Cariaco Time Series Study.}},
+year = {2013}
+}
+
+
+@article{Redfield1963,
+author = {Redfield, Alfred C},
+journal = {The sea},
+pages = {26--77},
+publisher = {Wiley-Interscience},
+title = {{The influence of organisms on the composition of seawater}},
+volume = {2},
+year = {1963}
+}
+
+
 @article{Lin2012,
 abstract = {The article makes the case that Python is the next wave in Earth sciences computing for one simple reason: Python enables users to do more and better science. The article also describes how these features provide abilities in scientific computing that are currently less likely to be available with existing tools, and highlight the growing support for Python in the Earth sciences as well as events at the upcoming 2013 AMS Annual Meeting that will cover Python in the Earth sciences. A number of other languages have some of Python's features: Fortran 90, for instance, also supports array syntax. Python's unique strengths are the interconnectedness and comprehensiveness of its tool suite and the ease with which one can apply innovations from other communities and disciplines. The Earth sciences community has begun to recognize the unique benefits of Python, and as a result its population of users is growing.},
 author = {Lin, Johnny Wei Bing},
