--- a/PhDProposal 01/proposal.tex
+++ b/PhDProposal 01/proposal.tex
@@ -19,7 +19,8 @@
 %\usepackage[a4paper,landscape]{geometry}
 \usepackage{geometry} % to change the page dimensions
 \geometry{a4paper} % or letterpaper (US) or a5paper or....
-% \geometry{margins=2in} % for example, change the margins to 2 inches all round
+%\geometry{margins=2in} % for example, change the margins to 2 inches all round
+
 % \geometry{landscape} % set up the page for landscape
 %   read geometry.pdf for detailed page layout information
 
@@ -102,7 +103,7 @@
 \end{footnotesize}
 
 %REMOVE THIS LATER%
-\input{RepositoryOfStructures.tex}
+%\input{RepositoryOfStructures.tex}
 
 
 \end{document}
