--- a/PhDProposal 01/0-Titel/title2.tex
+++ b/PhDProposal 01/0-Titel/title2.tex
@@ -26,11 +26,10 @@
 
 % Title
 
-{ \Huge \bfseries Modeling diverse phytoplankton communities in the eastern Cariaco basin, Venezuela}\\[0.4cm]
+{ \Huge \bfseries Modeling changing phytoplankton communities in the Cariaco Basin, Venezuela}\\[0.4cm]
 
-{\tiny*prop need broader title here for PhD Project*}
 
-\vspace{2cm}
+\vspace{3 cm}
 % Author and supervisor
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} 
@@ -51,7 +50,7 @@ Prof Dr.~Andrew D. \MakeUppercase{Barton}\\
 \vspace{2cm}
 
 % Bottom of the page
-{\today}
+{August 16, 2019 }
 
 \end{center}
 
@@ -63,28 +62,12 @@ Prof Dr.~Andrew D. \MakeUppercase{Barton}\\
 
 \normalsize
 
-At an unprecedented rate our oceans are changing and so are the organisms within it.
+%OK, still need some work here! 
 
-- Global Change / Phytoplankton - it's important
+Driven by anthropogenic influences, the environmental conditions on our planet are changing at an unprecedented rate and so are the communities and organisms inhabiting it. As oceanic primary producers, phytoplankton plays a central role in the global biogeochemical cycles and are a key component of computational models exploring the biogeochemistry of the ocean. The field of phytoplankton modeling has seen great advances in the last 20 years, in particular the “trait-based” approach promises ecologically meaningful descriptions of biodiversity by moving away from treating species explicitly, but instead looking at the way organisms interact with the environment (i.e. their traits). Current modeling approaches are moving towards an explicit treatment of biodiversity to explore the effects on ecosystem function. The CARIACO time-series, located in the Cariaco Basin off the coast of Venezuela, provides long-term observations of the biogeochemistry of a tropical coastal ecosystem, that includes measurements of phytoplankton taxonomic and functional diversity. Over the more than 20 years of data collection, clear trends of warming and a marked shift in the phytoplankton community have been described. As of yet, there have been no comprehensive ecosystem modeling studies performed using this data. The project aims to further our understanding of phytoplankton communities by using computational ecosystem modeling applied to the CARIACO time-series data. In the first study a phytoplankton functional-type (PFT) model will be used to investigate aggregate biomass changes between contrasting environmental regimes. Towards this study I have developed a modeling framework in the programming language Python. The development of this modeling tool as an open-source package will form the basis of a technical publication. This flexible modeling framework will then be used to investigate the relationships between biodiversity and ecosystem function (BDEF) with an explicit treatment of biodiversity and testing the model mechanism against the relationship observed in the CARIACO time-series data. 
 
-- phytoplankton is a complex and diverse community, in a complex ecosystem, trait-based vs functional type
 
-- CARIACO is a setting where both of these things are obviously happening/true and I have the data to backitup
 
-- computational models are the way to synthesisze and test hypotheses about these complex systems
-
-- I have built a modeling framework to test functional type hypothesis, first study looking at bulk biomass changes
-
-- the modelling framework itself is interesting and publishable
-
-- now going to San Diego to work with Andrew Barton on expand upon first study and look at more detailed BDEF and other such stuff
-
-- goal is to improve understanding of ocean ecosystem and how it might be affected by global changes
-
- 
-
-"Totally need to rewrite this:
-
- We are struggling to find ways to characterize and quantify the organisms and their interactions in ways that can be effectively utilized in computational models to predict future scenarios. Phytoplankton are an integral part of modeling the biogeochemical interactions taking place in the ocean. One of the key questions is how to accurately describe the interactions and effects on the ecosystem of the remarkably diverse planktonic community. The field of marine biogeochemical modeling has seen great advances in the last 20 years, in particular the “trait-based” approach promises ecologically meaningful descriptions of biodiversity by moving away from treating species explicitly, but instead looking at the way organisms interact with the environment (i.e. their traits). Two such models form the basis for my doctoral studies: The PhytoSFDM model, developed by my supervisor Esteban Acevedo-Trejos, and the DARWIN model, a framework developed at MIT and used extensively by Andrew Barton. 
+  
 
 \end{titlepage}
